# objLoader

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  DirectionalLight.h  Game.h  HashPair.h  Light.h  LoadFiles.h  LoadOBJ.h  Material.h  Mesh.h  Model.h  Moveable.h  PointLight.h  Primitive.h  PrimitiveCube.h  PrimitivePyramid.h  PrimitiveQuad.h  Shader.h  Texture.h  UserInterface.h  Vertex.h  enumDemo.h  enumGuiEvent.h  enumLight.h  enumTexture.h  includes.h
shaders/: fragment_core.glsl  fragment_normals.glsl  fragment_picking.glsl  geometry_core.glsl  geometry_normals.glsl  vertex_core.glsl
shaders/boom/: geometry.glsl  vertex.glsl
shaders/core/: fragment_core.glsl  geometry_core.glsl  vertex_core.glsl
shaders/normals/: geometry_normals.glsl
shaders/phong/: fragment_phong.glsl  vertex_phong.glsl
shaders/picking/: fragment_picking.glsl  vertex_picking.glsl
shaders/tessellation/: fragment.glsl  geometry.glsl  tessControl.glsl  tessControl.tesc  tessEval.glsl  tessEval.tese  vertex.glsl
src/: demoImGUI.cpp  main.cpp
